@startuml

title __RESOURCES's Class Diagram__\n

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.resourcesGroup {
        class ca.ulaval.glo4002.game.domain.resourcesGroup.Burger {
            - expiration : int
            + Burger()
            + decreaseExpirationDate()
            + getDaysLeft()
        }
      }
    }
  }
  

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.resourcesGroup {
        class ca.ulaval.glo4002.game.domain.resources.ResourceGrouprces {
            - resourcesGroup : Map<String, ResourceElements>
            + Resource()
            + addBurger()
            + addSalad()
            + addWater()
            + clear()
            + getBurgersQuantity()
            + getResources()
            + getSaladQuantity()
            + getWaterQuantity()
        }
      }
    }
  }
  

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.resourcesGroup {
        abstract class ca.ulaval.glo4002.game.domain.resourcesGroup.Resource {
            - quantity : int
            + ResourceElements()
            + addQuantity()
            {abstract} + decreaseExpirationDate()
            {abstract} + getDaysLeft()
            + getQuantity()
            + removeElement()
            + reset()
            + setQuantity()
        }
      }
    }
  }
  

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.resourcesGroup {
        class ca.ulaval.glo4002.game.domain.resourcesGroup.ResourcesFactory {
            + create()
        }
      }
    }
  }
  

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.resourcesGroup {
        interface ca.ulaval.glo4002.game.domain.resourcesGroup.ResourceRepository {
            {abstract} + add()
            {abstract} + decreaseExpirationDate()
            {abstract} + drinkWater()
            {abstract} + eatBurger()
            {abstract} + eatSalad()
            {abstract} + findAll()
            {abstract} + findConsumedResource()
            {abstract} + findExpiredResource()
            {abstract} + findFreshResource()
            {abstract} + findResourceQuantity()
            {abstract} + reset()
        }
      }
    }
  }
  

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.resourcesGroup {
        class ca.ulaval.glo4002.game.domain.resourcesGroup.Salad {
            - expiration : int
            + Salad()
            + decreaseExpirationDate()
            + getDaysLeft()
        }
      }
    }
  }
  

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.resourcesGroup {
        class ca.ulaval.glo4002.game.domain.resourcesGroup.Water {
            - expiration : int
            + Water()
            + decreaseExpirationDate()
            + getDaysLeft()
        }
      }
    }
  }
  

  ca.ulaval.glo4002.game.domain.resourcesGroup.Burger -up-|> ca.ulaval.glo4002.game.domain.resourcesGroup.Resource
  ca.ulaval.glo4002.game.domain.resourcesGroup.Salad -up-|> ca.ulaval.glo4002.game.domain.resourcesGroup.Resource
  ca.ulaval.glo4002.game.domain.resourcesGroup.Water -up-|> ca.ulaval.glo4002.game.domain.resourcesGroup.Resource


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
